chore: fix overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,12 @@
-* {
-  padding: 0;
-  margin: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   background-image: url("/assets/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  overflow-y: hidden;
 }
 
 @font-face {
